# config/routes.rb
@@ -3,7 +3,7 @@ Rails.application.routes.draw do
   namespace 'api' do
     namespace 'v1' do
       resources :kids do
-        get '/communication_notebooks/new', to: 'communication_notebooks#new'
+        get '/communication_notebooks/doesExist', to: 'communication_notebooks#new'
         get '/communication_notebooks/edit', to: 'communication_notebooks#edit'
         get '/communication_notebooks/registration', to: 'communication_notebooks#registration'
         resources :communication_notebooks
