# swagger.yml
@@ -108,6 +108,29 @@ paths:
             $ref: '#/definitions/400NoInputError'
         200:
           description: "OK"
+  /kid/:id/communication_notebooks/new:
+    get:
+      tags:
+      - "communication_notebooks"
+      summary: "ある日付の連絡帳が存在しているかどうかチェック"
+      description: ""
+      parameters:
+        - name: kid_id
+          in: path
+          description: 子供のID
+          required: true
+          type: integer
+          format: int32
+      responses:
+        200:
+          description: "成功時のレスポンス"
+          schema:
+            type: array
+            $ref: '#/definitions/Communication_notebook'
+        404:
+          description: "該当する連絡帳が見つからない"
+          schema:
+            $ref: '#/definitions/404Error'
 definitions:
   Communication_notebook:
     type: object
